# ucritair-firmware

./: .gitignore  .gitmodules  README.md  TOS_interface.h  bringup_notes.txt  docker-compose.yaml  flashing.txt  matt_flash.sh  mcuboot.patch  mcuboot.txt  pl_flash.sh  west.yml  zephyr.patch
zephyrapp/: CMakeLists.txt  atlasdata.txt  persistant.ld  prj.conf
zephyrapp/boards/: nrf5340dk_nrf5340_cpuapp.overlay
zephyrapp/boards/arm/cat5340/: Kconfig  Kconfig.cat5340  Kconfig.defconfig  board.cmake  board.yml  cat5340_common.dtsi  cat5340_nrf5340_cpuapp.dts  cat5340_nrf5340_cpuapp.yaml  cat5340_nrf5340_cpuapp_ns.dts  cat5340_nrf5340_cpuapp_ns.yaml  cat5340_nrf5340_cpunet.dts  cat5340_nrf5340_cpunet.yaml  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dtsi
zephyrapp/dts/bindings/: cat-misc.yaml  epaper-display.yaml
zephyrapp/game/: .gitignore  CMakeLists.txt  NodeEditor.json  README.md  cmp.txt  imgui.ini  makefile  new.conf  save.dat.backup  save.dat.backup.legacy  save.dat.legacy.backup  save.hexproj
zephyrapp/game/assets/: dialogue_assets.c  dialogue_profile_assets.h  item_assets.h  mesh2d_assets.c  mesh2d_assets.h  mesh_assets.c  mesh_assets.h  notice_assets.c  notice_assets.h  prop_assets.h  scene_assets.c  sprite_assets.c  sprite_assets.h  theme_assets.c  theme_assets.h  tinysprite_assets.c  tinysprite_assets.h
zephyrapp/game/backup/: sprites.json
zephyrapp/game/backup/uhoh/: items.json  meshes.json
zephyrapp/game/canon/: items.json  items_book.json  items_bread.json
zephyrapp/game/capture/: pngify.sh
zephyrapp/game/data/: config.c  config.h  config.json  dialogue.json  dialogue_assets.c  dialogue_assets.h  dialogue_profile_assets.c  dialogue_profiles.json  fish.json  fish_assets.c  fish_assets.h  item_assets.c  item_assets.h  items.json  items.json.backup  notices.json  prop_assets.c  prop_assets.h  props.json  recipes.json  scene_assets.c  scene_assets.h  scenes.json  stats.c  stats.h  theme_assets.c  theme_assets.h  themes.json  tweaking.json
zephyrapp/game/docs/: fish.html  fish.md  hardware.html  index.html  items.html  items.md  sakura.css  test.html
zephyrapp/game/editor/: editor.ini  editor.py  ee_anim_viewer.py  ee_assets.py  ee_canvas.py  ee_context.py  ee_cowtools.py  ee_dialogue.py  ee_document_editor.py  ee_file_explorer.py  ee_input.py  ee_mesh2d_editor.py  ee_procs.py  ee_prop_editor.py  ee_qr_encoder.py  ee_qrgen.py  ee_recipes.py  ee_scene_editor.py  ee_sprite_explorer.py  ee_sprites.py  ee_theme_editor.py  ee_tool_window.py  ee_types.py  type.json  types.py  typist.py
zephyrapp/game/editor/backups/: dialogue.json  dialogue_profiles.json  items.json  mesh2ds.json  props.json  recipes.json  scenes.json  sounds.json  sprites.json  tinysprites.json
zephyrapp/game/game/: Makefile
zephyrapp/game/generators/: dialoguegen.py  dialogueprofilegen.py  itemgen.py  meshgen.py  noticegen.py  propgen.py  scenegen.py  spritegen.py  tinyspritegen.py
zephyrapp/game/meshes/: mesh2d_assets.c  mesh2d_assets.h  mesh2ds.json  mesh_assets.c  mesh_assets.h  meshes.json
zephyrapp/game/playground/: circbuf  circbuf.c  clock  clock.c
zephyrapp/game/screen_capture/: test.ppm
zephyrapp/game/shaders/: cat.frag
zephyrapp/game/soundgen_temp/: out.au
zephyrapp/game/sounds/: sound_assets.c  sound_assets.h  sounds.json
zephyrapp/game/sprites/: sprite_assets.c  sprite_assets.h  sprites.json  sprites.json.backup  test.aseprite  tinysprite_assets.h  tinysprites.json
zephyrapp/game/sprites/eink/: epaper_test_card.aseprite
zephyrapp/game/sprites/gizmos/: target_gizmo_17x17.aseprite
zephyrapp/game/sprites/minigame/: stamp_template.aseprite
zephyrapp/game/sprites/testing/: animachine.aseprite  grade_stamps.aseprite  lower_tray.aseprite  new_glyphs_a.aseprite  node_wood.aseprite  refresh.aseprite  stamp_frame.aseprite  upper_tray.aseprite
zephyrapp/game/sprites/ui/: checkbox.aseprite  radio_button_circle.aseprite  reflesh_splash_spring.aseprite  tinyglyphs.aseprite  touch_icon.aseprite  ucrit_splash.aseprite  vxrl_buddy.aseprite  vxrl_text.aseprite
zephyrapp/game/src/: cat_actions.c  cat_actions.h  cat_aqi.c  cat_aqi.h  cat_arcade.c  cat_arcade.h  cat_bag.c  cat_bag.h  cat_cheats.c  cat_core.h  cat_crawl.c  cat_debug.c  cat_deco.c  cat_deco.h  cat_desktop.c  cat_desktop.h  cat_embedded.c  cat_embedded.h  cat_gui.c  cat_gui.h  cat_hedron.c  cat_input.c  cat_input.h  cat_insights.c  cat_insights.h  cat_inventory.c  cat_inventory.h  cat_item.c  cat_item.h  cat_item_dialog.c  cat_item_dialog.h  cat_list.h  cat_machine.c  cat_machine.h  cat_magic.c  cat_main.c  cat_main.h  cat_manual.c  cat_manual.h  cat_math.c  (+26 more)
zephyrapp/game/src/air/: cat_air.c  cat_air.h  cat_aqi.c  cat_aqi.h  cat_crisis.c  cat_crisis.h  cat_crisis_report.c
zephyrapp/game/utils/: b64encode.py  backup.sh  build.sh  canonize_ids.py  catenv.sh  chchecker.py  check_includes.py  clean.sh  confcmp.py  configgen.py  divide_by_16.py  editor.py  embedbuild.sh  encoder.c  envgen.sh  environment.sh  fishgen.py  flash.py  flash.sh  forbidden_spritegen.py  grass.py  includes.py  itemgen.py  jsonify_sprites.py  massbuild.sh  massflash.py  massflash.sh  massflash_batch.py  massflash_poll.py  mesh.py  meshgen.py  pack_sprites.py  persistgen.py  pipeline.md  protobufgen.sh  push.sh  recmake.sh  requirements.txt  serial.sh  soundgen.py  (+8 more)
zephyrapp/script/: .gitignore  atlasdata.txt  images.c  load_w25q.py  pack_images.py
zephyrapp/src/: airquality.c  airquality.h  batt.c  batt.h  bl_update.c  bl_update.h  ble.c  ble.h  bootloader_image_data.inc  buttons.c  buttons.h  debugmenu.c  debugmenu.h  display_pinctrl.c  display_pinctrl.h  epaper.c  epaper.h  epaper_driver.c  epaper_driver.h  epaper_rendering.c  epaper_rendering.h  flash.c  flash.h  img.c  imu.c  imu.h  lcd_driver.c  lcd_driver.h  lcd_rendering.c  lcd_rendering.h  main.c  misc.c  misc.h  msht.c  msht.h  mt_test.c  mt_test.h  power_control.c  power_control.h  rgb_leds.c  (+20 more)
zephyrapp/src/menu/: menu_aqi.c  menu_aqi.h  menu_graph.c  menu_graph.h  menu_graph_rendering.c  menu_system.c  menu_system.h  menu_time.c  menu_time.h
(+329 files in other folders)
